--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ margin-top: 20px;
+ background-color: #f8f8f8;
+}
+.todo-list{
+  margin: 10px 0px;
+}
+.todo-list .todo-item{
+  padding: 15px;
+  margin: 5px 0px;
+  border-radius: 0px;
+}
+div.checker input{
+ width: 18px;
+ height: 18px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+div.checker{
+  display: inline-block;
+  vertical-align: middle;
+  width: 18px;
+  height: 18px;  
 }
+
